--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
+    "file-loader": "^1.1.5",
     "mocha": "^4.0.1"
   }
 }
